# heppyy

./: .gitignore  README.md  install_with_yasp.sh
example/: test_pythia_fastjet.py  test_yasp_cppyy.py  test_yaspcppyy_pythia_fastjet.py
heppyy/: CMakeLists.txt  __init__.py
heppyy/cmake/: common_heppyy_finds.cmake  heppyy_find_python.cmake  install_targets_custom.cmake
heppyy/cmake/Modules/: FindFastJet.cmake  FindHepMC.cmake  FindHepMC3.cmake  FindPythia8.cmake  FindROOT4HEPPYY.cmake
heppyy/example/: README.md  pythia_parts2root.py  read_hybrid.py  test_hepmc2util.py  test_jewelutil.py  test_load_yasp_heppyy.ipynb  test_pythia_fastjet.ipynb  test_pythia_fastjet.py  test_yaspcppyy_pythia_fastjet.py  test_yaspcppyy_pythia_fastjet_simple_load.py
heppyy/example/powheg_pythia/: README.md  powheg_dijet_lhc.input  powheg_hvq_b_lhc.input  powheg_hvq_c_lhc.input  pythia8_powheg.py
heppyy/pythia_util/: configuration.py
heppyy/sandbox/: eec_lund.py  eech.py  hepmc_jetreco.py  hepmc_jetreco_eec.py  pythia8_jetreco_eec.py  pythia_fj_example.ipynb  pythia_otf_eec.py  pythia_otf_lund_dump.py  requirements.txt
heppyy/sandbox/visual/jet_draw/: jet_graph_draw_example.ipynb  jet_graph_fig.py  make_movies.sh
heppyy/sherpa_util/: test.py  test.py.bak
heppyy/src/: CMakeLists.txt
heppyy/src/eec/: CMakeLists.txt
heppyy/src/fjext/: CMakeLists.txt  fjtools.hh
heppyy/src/fjutil/: CMakeLists.txt  fjutil.cxx  fjutil.hh
heppyy/src/groom/: CMakeLists.txt  GroomerShop.cxx  GroomerShop.hh
heppyy/src/hepmc2util/: CMakeLists.txt  readfile.cxx  readfile.hh  statfile.cxx  statfile.hh
heppyy/src/hybridutil/: CMakeLists.txt  hybridNegaRecombiner.cxx  hybridNegaRecombiner.hh  readhybrid.cpp  readhybrid.cxx  readhybrid.hh
heppyy/src/jewelutil/: CMakeLists.txt  jewelrivetstrip.cxx  jewelrivetstrip.hh  readjewel.cxx  readjewel.hh
heppyy/src/pythiaext/: CMakeLists.txt  PythiaExt.cxx  PythiaExt.hh
heppyy/src/pythiafjext/: CMakeLists.txt  pyfjtools.cxx  pyfjtools.hh
heppyy/util/: fastjet_cppyy.py  hepmc2util_cppyy.py  heppyy_cppyy.py  jewelutil_cppyy.py  logger.py  map_cppyy.py  mputils.py  pythia8_cppyy.py  test_loaders.py  treewriter.py  yasp_cppyy_util.py
util/: configuration.py  map_cppyy.py
yasp_recipe/heppyy/: current.module  current.sh
